added variable that allows decision on firewall or not

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -69,53 +69,58 @@
     state: started
     enabled: yes
 #######Firewall#######################
-- name: Replace firehol config
-  template:
-    src: templates/firehol/firehol.j2
-    dest: /etc/firehol/firehol.conf
 
-- name: changing config to start firehol when machine starts
-  lineinfile:
-    path: /etc/default/firehol
-    regexp:  "START_FIREHOL=NO"
-    line: "START_FIREHOL=YES"
-    backrefs: yes
-    state: present
+- name: Firewall
+  block:
+  - name: Replace firehol config
+    template:
+      src: templates/firehol/firehol.j2
+      dest: /etc/firehol/firehol.conf
 
-- name: Ensure firehol is started and enabled
-  service:
-    name: firehol
-    state: started
-    enabled: yes
+  - name: changing config to start firehol when machine starts
+    lineinfile:
+      path: /etc/default/firehol
+      regexp:  "START_FIREHOL=NO"
+      line: "START_FIREHOL=YES"
+      backrefs: yes
+      state: present
 
-- name: Starting firewall
-  command: firehol start
+  - name: Ensure firehol is started and enabled
+    service:
+      name: firehol
+      state: started
+      enabled: yes
+
+  - name: Starting firewall
+    command: firehol start
 #####Fail2ban#######################
-- name:  modify fail2ban to work with firehol (step 1b --> modify jail.local)
-  template:
-    dest: /etc/fail2ban/jail.local
-    src: files/fail2ban/jail.local
+  - name:  modify fail2ban to work with firehol (step 1b --> modify jail.local)
+    template:
+      dest: /etc/fail2ban/jail.local
+      src: files/fail2ban/jail.local
 
-- name: modify fail2ban to work with firehol (step 2 --> Create fail2ban.service.d directory)
-  file:
-    path: /etc/systemd/system/fail2ban.service.d/
-    state: directory
-    owner: root
-    group: root
-    mode: 0755
+  - name: modify fail2ban to work with firehol (step 2 --> Create fail2ban.service.d directory)
+    file:
+      path: /etc/systemd/system/fail2ban.service.d/
+      state: directory
+      owner: root
+      group: root
+      mode: 0755
 
-- name: modify fail2ban to work with firehol (step 2b --> binding fail2ban to firehol)
-  template:
-    dest: /etc/systemd/system/fail2ban.service.d/override.conf
-    src: files/fail2ban/override.conf
+  - name: modify fail2ban to work with firehol (step 2b --> binding fail2ban to firehol)
+    template:
+      dest: /etc/systemd/system/fail2ban.service.d/override.conf
+      src: files/fail2ban/override.conf
 
-- name: modify fail2ban to work with firehol (step 3 --> iptable -w switch should be used)
-  lineinfile:
-    dest: /etc/firehol/firehol-defaults.conf
-    line: IPTABLES_CMD="/sbin/iptables -w"
+  - name: modify fail2ban to work with firehol (step 3 --> iptable -w switch should be used)
+    lineinfile:
+      dest: /etc/firehol/firehol-defaults.conf
+      line: IPTABLES_CMD="/sbin/iptables -w"
 
-- name: restart systemctl daemon
-  command: systemctl daemon-reload
+  - name: restart systemctl daemon
+    command: systemctl daemon-reload
+
+  when: {{ firewall }} == true
 
 - name: Ensure fail2ban is started and enabled
   service:
